<resources>
    <string name="app_name">Holcim Sales Execution</string>
    <string name="header_app_name">Sales Execution</string>
    <string name="message_button_ok">OK</string>
    <string name="message_title_confirm">Confirm</string>
    <string name="message_title_error">Error</string>
    <string name="consumer_key">3MVG9e2mBbZnmM6lk8YA8cOgMyxHxysRqKg4sP5Sry5bhGkZpZXCb7Ez0KGMGdDFZe9CchCu.Q20Ws71SzRPn</string>
    <string name="consumer_secret">4430680915156717853</string>
    <string name="oAuthUrlProduction">https://login.salesforce.com/services/oauth2/authorize?response_type=token&amp;display=touch&amp;client_id=</string>
    <string name="oAuthUrlTest">https://test.salesforce.com/services/oauth2/authorize?response_type=token&amp;display=touch&amp;client_id=</string>
    <string name="oAuthRefreshUrlProduction">https://login.salesforce.com/services/oauth2/token</string>
    <string name="oAuthRefreshUrlTest">https://test.salesforce.com/services/oauth2/token</string>
    <string name="callbackUrlProduction">https://login.salesforce.com/services/oauth2/success</string>
    <string name="callbackUrlTest">https://test.salesforce.com/services/oauth2/success</string>
    <string name="sdcard_unmounted">Collect cannot access the SD card. Perhaps it is mounted via USB? (Current state: %s)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="message_title_info">Information</string>
    <string name="message_no_internet_connection">No internet connection found. Please connect your device to the internet.</string>
    <string name="you_are_about_to_close">You are about to close</string>
    <string name="message_session_expired">Session expired. Please log in to continue.</string>
    <string name="message_button_close">Close</string>
    <string name="message_button_yes">Yes</string>
    <string name="message_button_no">No</string>
    <string name="message_logout_confirmation">Are you sure you want to logout?</string>
    <string name="message_app_internal_error">Application error. Please try again.</string>
    <string name="error_edittext">The name of the Folder is empty or too long. Please enter a valid name to update the Folder.</string>
    <string name="modal_pin_check_title">Please enter your PIN</string>
    <string name="modal_pin_check_wrong_pin_error">Wrong PIN</string>
    <string name="signin_pin_introduction">Please set a 4 number pin</string>
    <string name="confirm_signin_pin_introduction">Confirm your pin</string>
    <string name="btn_confirm_signin_pin_introduction">Continue</string>
    <string name="empty_sign_in_pin_modal_error_message">Empty fields.</string>
    <string name="actionLogNumber">Action Log Number </string>
    <string name="common_content_info">_</string>
    <string name="signin_activity_title">Signin</string>
    <string name="sign_in_pin_modal_error_message">PIN Confirmation does not match PIN.</string>
    <string name="sign_in_pin_modal_length_error_message">The PIN should have 4 number.</string>
    <string name="login">Login</string>
    <string name="current_week">Current Week</string>
    <string name="empty"></string>
    <string name="my_visit_plan_activity_title">My Visit Plan List</string>
    <string name="visit_detail_title">Detail of selected visit date</string>
    <string name="create_unplanned_visit">Create Unplanned Visit</string>
    <string name="selected_retailer_title">Selected Retailer</string>
    <string name="retailer">Retailer</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="tier_klb">Tier KLAB</string>
    <string name="account_info_title">Account Info</string>
    <string name="prospect_info_title">Prospect Info</string>
    <string name="last_competitor_market_info">Last Competitor Market Info</string>
    <string name="contact_info_title">Contact Info</string>
    <string name="shop_sign_title">Shop Sign</string>
    <string name="previous_sales_title">HIL Last Market Info</string>
    <string name="sales_title">Market Info</string>
    <string name="feedback_title">Feedback</string>
    <string name="preorder_title">Preorder</string>
    <string name="feedback_placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="finish">Finish</string>
    <string name="finish_se">Finish Sales Execution</string>
    <string name="ss_inspection">Inspection Date Time</string>
    <string name="ss_visibility_hil">Visibility of HIL Shop Sign</string>
    <string name="ss_condition">Condition of Shop Sign</string>
    <string name="ss_color_condition">Color Condition</string>
    <string name="ss_remark">Shop Sign Remark</string>
    <string name="ss_priority">Priority</string>
    <string name="ss_visibility_competitor">Visibility of Competitor Shop Sign</string>
    <string name="ss_availability_hil">Availability of HIL Shop Sign</string>
    <string name="ss_type">Type of Shop Sign</string>
    <string name="ss_competitor_name">Competitor Name</string>
    <string name="ss_cleanness">Cleanness Condition</string>
    <string name="ss_physical">Physical Condition</string>
    <string name="ss_action">Action</string>
    <string name="ss_action_status">Action Status</string>
    <string name="ss_picture">Shop Sign Picture</string>
    <string name="check_in">Check-in</string>
    <string-array name="nav_drawer_items">
        <item>Account</item>
        <item>Contact</item>
        <item>HIL Last Market Info</item>
        <item>Last Competitor Market Info</item>
        <item>Shop Sign</item>
        <item>Market Info</item>
        <item>Feedback</item>
        <item>Preorder</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="next_week">Next Week</string>
    <string name="home">Home</string>
    <string name="sync">Synchronize</string>
    <string name="view_plan">View Plan</string>
    <string name="view_contacts">View Contacts</string>
    <string-array name="sale_execution_action_status">
        <item></item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="sale_execution_action">
        <item>None</item>
        <item>Refurbish/Reposter panel (Perbaikan panel / sticker)</item>
        <item>Repair stand (Perbaikan tiang)</item>
        <item>Remove</item>
    </string-array>
    <string-array name="confirm">
        <item></item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="sales_execution_ss_competitor_name">
        <item>Indocement</item>
        <item>Semen Gresik</item>
        <item>Semen Merah Putih</item>
        <item>Semen Padang</item>
        <item>Others</item>
    </string-array>
    <string-array name="sales_execution_status">
        <item>Planned</item>
        <item>Canceled</item>
        <item>Completed</item>
        <item>Reassigned</item>
        <item>Rescheduled</item>
    </string-array>
    <string-array name="sales_execution_tier_klab_history">
        <item>Jaya Wijaya</item>
        <item>Kerinci</item>
        <item>Rinjani</item>
        <item>Semeru</item>
        <item>Red</item>
    </string-array>
    <string-array name="sales_execution_x_desired_reward">
        <item>Reward 1</item>
        <item>Reward 2</item>
        <item>Reward 3</item>
        <item>Reward 4</item>
    </string-array>
    <string-array name="sales_execution_type_shop_sign">
        <item></item>
        <item>Horizontal 3x1 meter, menempel bangunan (mounted on the building)</item>
        <item>Horizontal pakai tiang, 1 muka (with stand, one sided)</item>
        <item>Vertical 1x2.5 meter, 1 muka dan 2 muka dengan tiang (with stand, one sided or two sided)</item>
    </string-array>
    <string-array name="sale_execution_cleanness_condition">
        <item></item>
        <item>Clean</item>
        <item>Dirty</item>
    </string-array>
    <string-array name="sale_execution_physical_condition">
        <item></item>
        <item>Good</item>
        <item>Damaged</item>
    </string-array>
    <string-array name="sale_execution_priority">
        <item></item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="sale_execution_color_condition">
        <item></item>
        <item>Clear &amp; readable (Jelas dan terbaca)</item>
        <item>Tarnished (pudar)</item>
    </string-array>
    <string-array name="sale_execution_condition_shop_sign">
        <item></item>
        <item>Need Re-postering</item>
        <item>Remove</item>
        <item>Replace</item>
        <item>Acceptable</item>
    </string-array>
    <string-array name="education_code">
        <item>Doctorate</item>
        <item>Master Degree</item>
        <item>Bachelor Degree</item>
        <item>High School</item>
        <item>Secondary School</item>
        <item>Elementary School</item>
        <item>Others</item>
    </string-array>
    <string-array name="lead_source">
        <item>Advertisement</item>
        <item>Employee Referral</item>
        <item>External Referral</item>
        <item>Partner</item>
        <item>Public Relations</item>
        <item>Seminar - Internal</item>
        <item>Seminar - Partner</item>
        <item>Show</item>
        <item>Web</item>
        <item>Word of mouth</item>
        <item>Other</item>
        <item>Phone Inquiry</item>
        <item>Partner Referral</item>
        <item>Purchased List</item>
    </string-array>
    <string-array name="level">
        <item>Secondary</item>
        <item>Tertiary</item>
        <item>Primary</item>
    </string-array>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="comment_type">
        <item>Feedback</item>
        <item>Complaint</item>
    </string-array>
    <string-array name="comment_category">
        <item>Technical</item>
        <item>Sales</item>
        <item>Marketing</item>
        <item>Finance</item>
        <item>Logistic</item>
        <item>Promotion</item>
        <item>Other</item>
    </string-array>
    <string name="create_new_contact">Create New Contact</string>
    <string name="accounts">Accounts</string>
    <string name="prospects">Prospects</string>
    <string name="pse_header_buying_price">Last HIL Buying Price</string>
    <string name="pse_header_selling_price">Last HIL Selling Price</string>
    <string name="pse_header_inventory">Last HIL Inventory</string>
    <string name="pse_header_buying_volume">Last HIL Buying Volume</string>
    <string name="pse_bp_price_date">Last HIL Buying Price Date</string>
    <string name="pse_bp_hil_price">Last HIL Buying Price</string>
    <string name="pse_sp_hil_sp_date">Last HIL Selling Price Date</string>
    <string name="pse_sp_hil_sp">Last HIL Selling Price</string>
    <string name="pse_li_hil_inv_date">Last HIL Inventory Date</string>
    <string name="pse_li_hil_inv">Last HIL Inventory (Tons)</string>
    <string name="pse_bv_hil_v">Last HIL Buying Volume (Tons)</string>
    <string name="pse_bv_note">Note:</string>
    <string name="pse_bv_note_value">All other fields on this page are taken from last execution transaction</string>
    <string name="acc_JelajahHolcimID">Jelajah Holcim ID</string>
</resources>