<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageButton_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/common_content_info"
            android:src="@drawable/home" />

        <TextView
            android:id="@+id/textView_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/previous_sales_title"
            android:textColor="@color/holcim_red"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayoutName"
        android:layout_marginBottom="50dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <!-- Last Buying Price -->

            <TextView
                android:id="@+id/header_buying_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/pse_header_buying_price"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/holcim_red"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_pse_bp_price_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pse_bp_price_date"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/datepicker_pse_bp_price_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:scaleX="0.8"
                android:scaleY="0.8" />

            <TextView
                android:id="@+id/lbl_pse_bp_hil_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pse_bp_hil_price"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edt_bp_hil_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp" />

            <!-- Last Selling Price -->

            <TextView
                android:id="@+id/header_selling_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/pse_header_selling_price"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/holcim_red"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_pse_sp_hil_sp_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pse_sp_hil_sp_date"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/datepicker_pse_sp_hil_sp_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:scaleX="0.8"
                android:scaleY="0.8" />

            <TextView
                android:id="@+id/lbl_pse_sp_hil_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pse_sp_hil_sp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edt_pse_sp_hil_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp" />

            <!-- Last Inventory -->

            <TextView
                android:id="@+id/header_inventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/pse_header_inventory"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/holcim_red"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_pse_li_hil_inv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pse_li_hil_inv_date"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/datepicker_pse_li_hil_inv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:scaleX="0.8"
                android:scaleY="0.8" />

            <TextView
                android:id="@+id/lbl_pse_li_hil_inv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pse_li_hil_inv"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edt_pse_li_hil_inv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp" />

            <!-- Last Buying Volume -->

            <TextView
                android:id="@+id/header_buying_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/pse_header_buying_volume"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/holcim_red"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_pse_bv_hil_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pse_bv_hil_v"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edt_pse_bv_hil_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/note_buying_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pse_bv_note"
                android:textColor="@color/holcim_red"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/note_buying_volume_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/pse_bv_note_value"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton_back"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:contentDescription="@string/common_content_info"
            android:scaleType="fitXY"
            android:src="@drawable/back" />

        <ImageButton
            android:id="@+id/imageButton_next"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:contentDescription="@string/common_content_info"
            android:scaleType="fitXY"
            android:src="@drawable/next" />
    </RelativeLayout>

    <include
        android:id="@+id/linearlayout_footer"
        layout="@layout/footer" />

</RelativeLayout>