<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageButton_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/common_content_info"
            android:src="@drawable/home" />
        <LinearLayout
            android:id="@+id/linearlayout_search"
            android:layout_width="175dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/search_list_view"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/imageview_search_icon"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="left|center_vertical"
                android:contentDescription="@string/common_content_info"
                android:src="@drawable/search" />
            <EditText
                android:id="@+id/edittext_search"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:background="@color/transparent"
                android:hint="@string/empty"
                android:inputType="text"
                android:textSize="15sp" />
        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_header_accounts"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/header_listview" >

            <TextView
                android:id="@+id/textView_title_listview_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/accounts"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/relative_layout_header"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/linearlayout_search"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView_retailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/retailer"
                android:textColor="@color/holcim_red"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_jhid_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="130dp"
                android:text="@string/acc_JelajahHolcimID"
                android:textColor="@color/holcim_red"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView_kecamatan_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/kecamatan"
                android:textColor="@color/holcim_red"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ListView
            android:id="@+id/list_view_accounts"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/common_row_list_view"
            android:divider="@color/holcim_red"
            android:dividerHeight="1sp" >
        </ListView>

        <LinearLayout
            android:id="@+id/linear_layout_header_prospects"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/header_listview" >

            <TextView
                android:id="@+id/textView_title_listview_prospects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/prospects"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/relative_layout_header1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/linearlayout_search"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/retailer_prospects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/retailer"
                android:textColor="@color/holcim_red"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_reference_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="120dp"
                android:text="Reference Number"
                android:textColor="@color/holcim_red"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/kecamatan_prospects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/kecamatan"
                android:textColor="@color/holcim_red"
                android:textSize="15sp"
                android:textStyle="bold" />


        </RelativeLayout>
        <ListView
            android:id="@+id/list_view_prospects"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/common_row_list_view"
            android:divider="@color/holcim_red"
            android:dividerHeight="1sp" >
        </ListView>
    </LinearLayout>

    <include
        android:id="@+id/linearlayout_footer"
        layout="@layout/footer" />

</RelativeLayout>