<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageButton_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/common_content_info"
            android:src="@drawable/home" />

        <LinearLayout
            android:id="@+id/linearlayout_search"
            android:layout_width="175dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/search_list_view"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageview_search_icon"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="left|center_vertical"
                android:contentDescription="@string/common_content_info"
                android:src="@drawable/search" />

            <EditText
                android:id="@+id/edittext_search"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:background="@color/transparent"
                android:hint="@string/empty"
                android:inputType="text"
                android:textSize="15sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_view_contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearlayout_search"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_list_view"
            android:divider="@color/holcim_red"
            android:dividerHeight="1sp" >
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_create_new_contact"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/confirm_button"
            android:contentDescription="@string/common_content_info"
            android:minWidth="140dp"
            android:text="@string/create_new_contact"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <include
        android:id="@+id/linearlayout_footer"
        layout="@layout/footer" />

</RelativeLayout>